Gjgsnrf bcghfdbnm ytxbnftvst cbvdjks

--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -40,14 +40,14 @@
    "source": [
     "$A$ - подсудимый виновен  \n",
     "$В$ - кровь редкой группы  \n",
-    "$В|A$ - редкая группы крови, при условии человек у виновен   \n",
-    "$A|B$ - виновен , при редкой группы крови  \n",
+    "$В | A$ - редкая группы крови, при условии человек у виновен   \n",
+    "$A | B$ - виновен , при редкой группы крови  \n",
     "$Р(В) - 0.01$  \n",
-    "$P(В|A) - 1$  \n",
-    "$P(A|B) - ?$\n",
+    "$P(В | A) - 1$  \n",
+    "$P(A | B) - ?$\n",
     "\n",
     "Откуда получил прокурор 99% не понятно, если он расчитал вероятность как $P = 1 - P(B)$, то он получил вероятность того что человека обычная группа корви  \n",
-    "Если прокурор хотел посчитать вероятность того что подсудимый виновен имея редкую группу крови $P(A|B) = \\frac{P(B|A)P(A)}{P(B)}$, вероятность того что подсудимый виновен это $P(A) - $"
+    "Если прокурор хотел посчитать вероятность того что подсудимый виновен имея редкую группу крови $P(A|B) = \\frac{P(B|A)P(A)}{P(B)}$, вероятность того что подсудимый виновен это $P(A)$ неизвестно"
    ]
   },
   {
