только 3 задания из 5, бонусных 0

--- a/chgk.ipynb
+++ b/chgk.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,14 +75,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5528/5528 [00:26<00:00, 208.43it/s]  \n"
+      "100%|██████████| 5528/5528 [00:24<00:00, 222.82it/s]  \n"
      ]
     }
    ],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,17 +126,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 5346/5346 [49:21<00:00,  1.81it/s]  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# positions = {}\n",
     "# for player in tqdm(df.player_id.unique()):\n",
@@ -152,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -182,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -225,30 +217,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Удалим игроков которые ответили меньше чем на 1000 вопросов  \n",
-    "Не стоит пока этого делать"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 459,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df = df_questions[df_questions.groupby('player_id')['answer'].transform(len) >= 1000]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Задание 2\n",
     "Постройте baseline-модель на основе линейной или логистической регрессии, которая будет обучать рейтинг-лист игроков. Замечания и подсказки:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +266,7 @@
        "      <td>3730</td>\n",
        "      <td>1.5</td>\n",
        "      <td>117</td>\n",
-       "      <td>{'id': 117, 'name': 'Марина', 'patronymic': 'Г...</td>\n",
+       "      <td>9555</td>\n",
        "      <td>1</td>\n",
        "      <td>1176.0</td>\n",
        "      <td>0.325116</td>\n",
@@ -303,7 +278,7 @@
        "      <td>3730</td>\n",
        "      <td>1.5</td>\n",
        "      <td>87865</td>\n",
-       "      <td>{'id': 87865, 'name': 'Константин', 'patronymi...</td>\n",
+       "      <td>9773</td>\n",
        "      <td>1</td>\n",
        "      <td>1028.0</td>\n",
        "      <td>0.325116</td>\n",
@@ -315,7 +290,7 @@
        "      <td>3730</td>\n",
        "      <td>1.5</td>\n",
        "      <td>30672</td>\n",
-       "      <td>{'id': 30672, 'name': 'Татьяна', 'patronymic':...</td>\n",
+       "      <td>9939</td>\n",
        "      <td>1</td>\n",
        "      <td>1291.0</td>\n",
        "      <td>0.325116</td>\n",
@@ -327,7 +302,7 @@
        "      <td>3730</td>\n",
        "      <td>1.5</td>\n",
        "      <td>35442</td>\n",
-       "      <td>{'id': 35442, 'name': 'Айрат', 'patronymic': '...</td>\n",
+       "      <td>9647</td>\n",
        "      <td>1</td>\n",
        "      <td>1521.0</td>\n",
        "      <td>0.325116</td>\n",
@@ -339,7 +314,7 @@
        "      <td>3730</td>\n",
        "      <td>1.5</td>\n",
        "      <td>63465</td>\n",
-       "      <td>{'id': 63465, 'name': 'Александр', 'patronymic...</td>\n",
+       "      <td>9315</td>\n",
        "      <td>1</td>\n",
        "      <td>2050.0</td>\n",
        "      <td>0.325116</td>\n",
@@ -349,29 +324,22 @@
        "</div>"
       ],
       "text/plain": [
-       "   question_id  year  team_id  team_position  player_id  \\\n",
-       "0            0  2019     3730            1.5        117   \n",
-       "1            0  2019     3730            1.5      87865   \n",
-       "2            0  2019     3730            1.5      30672   \n",
-       "3            0  2019     3730            1.5      35442   \n",
-       "4            0  2019     3730            1.5      63465   \n",
+       "   question_id  year  team_id  team_position  player_id  player_rating  \\\n",
+       "0            0  2019     3730            1.5        117           9555   \n",
+       "1            0  2019     3730            1.5      87865           9773   \n",
+       "2            0  2019     3730            1.5      30672           9939   \n",
+       "3            0  2019     3730            1.5      35442           9647   \n",
+       "4            0  2019     3730            1.5      63465           9315   \n",
        "\n",
-       "                                       player_rating  answer  player_position  \\\n",
-       "0  {'id': 117, 'name': 'Марина', 'patronymic': 'Г...       1           1176.0   \n",
-       "1  {'id': 87865, 'name': 'Константин', 'patronymi...       1           1028.0   \n",
-       "2  {'id': 30672, 'name': 'Татьяна', 'patronymic':...       1           1291.0   \n",
-       "3  {'id': 35442, 'name': 'Айрат', 'patronymic': '...       1           1521.0   \n",
-       "4  {'id': 63465, 'name': 'Александр', 'patronymic...       1           2050.0   \n",
-       "\n",
-       "   difficulty  \n",
-       "0    0.325116  \n",
-       "1    0.325116  \n",
-       "2    0.325116  \n",
-       "3    0.325116  \n",
-       "4    0.325116  "
+       "   answer  player_position  difficulty  \n",
+       "0       1           1176.0    0.325116  \n",
+       "1       1           1028.0    0.325116  \n",
+       "2       1           1291.0    0.325116  \n",
+       "3       1           1521.0    0.325116  \n",
+       "4       1           2050.0    0.325116  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,27 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.5650430048110444"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(df['difficulty'] / df['difficulty'].shape[0]).sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -461,14 +409,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5346/5346 [02:05<00:00, 42.44it/s]\n"
+      "100%|██████████| 5346/5346 [01:53<00:00, 47.28it/s]\n"
      ]
     }
    ],
@@ -487,14 +435,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-40-f16d7c02ae58>:1: SettingWithCopyWarning: \n",
+      "<ipython-input-32-f16d7c02ae58>:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -509,14 +457,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-41-2870ced5eb0b>:1: SettingWithCopyWarning: \n",
+      "<ipython-input-33-2870ced5eb0b>:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -531,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1002,7 +950,7 @@
        "63              0.341562                -5.338686  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1055,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1064,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1168,7 +1116,7 @@
        "4            0.240380                -6.103618  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1179,18 +1127,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 24%|██▍       | 102/418 [00:18<00:54,  5.83it/s]/Users/out-opalev1-rs/opt/anaconda3/lib/python3.8/site-packages/scipy/stats/stats.py:4196: SpearmanRConstantInputWarning: An input array is constant; the correlation coefficent is not defined.\n",
+      " 24%|██▍       | 102/418 [00:18<00:54,  5.78it/s]/Users/out-opalev1-rs/opt/anaconda3/lib/python3.8/site-packages/scipy/stats/stats.py:4196: SpearmanRConstantInputWarning: An input array is constant; the correlation coefficent is not defined.\n",
       "  warnings.warn(SpearmanRConstantInputWarning())\n",
-      " 56%|█████▋    | 236/418 [00:30<00:22,  8.12it/s]/Users/out-opalev1-rs/opt/anaconda3/lib/python3.8/site-packages/scipy/stats/stats.py:4196: SpearmanRConstantInputWarning: An input array is constant; the correlation coefficent is not defined.\n",
+      " 57%|█████▋    | 237/418 [00:30<00:17, 10.63it/s]/Users/out-opalev1-rs/opt/anaconda3/lib/python3.8/site-packages/scipy/stats/stats.py:4196: SpearmanRConstantInputWarning: An input array is constant; the correlation coefficent is not defined.\n",
       "  warnings.warn(SpearmanRConstantInputWarning())\n",
-      "100%|██████████| 418/418 [00:33<00:00, 12.66it/s]\n"
+      "100%|██████████| 418/418 [00:33<00:00, 12.63it/s]\n"
      ]
     }
    ],
@@ -1232,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
