--- a/sherlok.ipynb
+++ b/sherlok.ipynb
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,15 +524,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "freq_dict = freq_dict_create(anna_karenina + war_peace)\n",
     "rus_top_frequent_chars = ''.join(freq_dict)[:len(set(krakozyabra))]\n",
-    "emdedings = {c: i for i, c in enumerate(rus_cahracters)}\n",
     "top_messega_chars = ''.join(set(krakozyabra))\n",
     "message = krakozyabra.translate(str.maketrans(top_messega_chars, rus_top_frequent_chars))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 300000/300000 [00:35<00:00, 8423.11it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'ндов зь звывен слапройсью вов блиев слапройсью енуде м челял дллктнсвх улелаью оняул баливерей дуланн зднял зь здн дыноров барзвойсл в бломивен прудвпройсью кроо фр блдоныснн инезнаелн фрырсвн умадр глех улснисл х свинял сн лкнтрж'"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mcmc(message,300000, ' абвгдеёжзийклмнопрстуфхцчшщъыьэюя')"
    ]
   },
   {
@@ -559,7 +585,7 @@
     }
    ],
    "source": [
-    "mcmc(message,300000, rus_cahracters)"
+    "mcmc(message,300000, ' абвгдеёжзийклмнопрстуфхцчшщъыьэюя')"
    ]
   }
  ],
